# dorm

./: .gitignore  CMakePresets.json  CmakeLists.txt  devenv.nix  vcpkg.json
src/: dorm.h  entity.h  entity_map.h  field_type.h  in_mem.h
tests/: CMakeLists.txt  dorm_tests.cc
